 - added new property "tinaDefaultFrameCount" to the Preferences, here you can change the default number of frames for a flame-animation,
   created in the main editor
 - new variations:
     -glitchy1 by Brad Stefanov, Rick Sidwell, dark-beam and bezo97
     -pixel_flow by bezo97
 - add polarplot variations to solid random flame generator, by Rick Sidwell
 - fixed a bug in blur_zoom, by Rick Sidwell
 - fixed a bug in onion2, by Brad Stefanov

V5.60 (06.05.2020)
 - new commandline-tool to create and render random flames.
   Example: java -cp j-wildfire-5.60/lib/j-wildfire.jar org.jwildfire.cli.CreateRandomFlame -w 1200 -h 675 -q 80
 - new variations:
     -julia_outside by Whittaker Courtney
     -polarplot3d_wf  by Rick Sidwell
     -polarplot2d_wf (Like yplot2d_wf, but uses polar coordinates. Fifteen presets of common polar curves) by Rick Sidwell
     -combimirror by Thomas Michels and Brad Stefanov
     -gingerbread_man,
     -hopalong,
     -gumowski_mira,
     -threeply,
     -triangle,
     -crop_box, post_crop_box,
     -crop_polygon, post_crop_polygon,
     -crop_cross, post_crop_cross,
     -crop_rhombus, post_crop_rhombus,
     -crop_stars,post_crop_stars,
     -crop_trapezoid,post_crop_trapezoid,
     -crop_triangle, post_crop_triangle,
     -crop_vesica,post_crop_vesica,
     -crop_x,post_crop_x,
     -pre_c_symmetry,
     -post_c_symetry,
     -pre_c_var,
     -post_c_var, all created by Jesus Sosa
 - new jitter-option for weighting-fields: Adds noise after transforms, so it works well with blurs as well as normal transforms, by Rick Sidwell
 - some new presets to yplot2d_wf variation, by Rick Sidwell
 - FIXED: added missing parameter colormap_filename for metaballs3d_f variation, by Rick Sidwell
 - FIXED: a bug regarding colormaps in isosfplot_wf, by Rick Sidwell
 - FIXED: a bug in the mask variation, by Rick Sidwell
 - FIXED: made js.glsl classes serializable, fixing a bug where dancing flame projects could not be saved, by Rick Sidwell